Homework2/dbs.tf
#Create DBs
resource "aws_db_instance" "prod-dbs" {
  allocated_storage    = 10
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t3.micro"
  name                 = "mydb"
  username             = "foo"
  password             = "foobarbaz"
  parameter_group_name = "default.mysql5.7"
  skip_final_snapshot  = true
  count                       = var.number_of_db_instances
}
